# CGDI-inpainting

./: CMakeLists.txt  README.md  ex.tex  launch.sh
GUI/: gui_skeleton.cpp  gui_skeleton.hpp
report/: biblio.bib  report.tex
src/: ANNsearch.cpp  ANNsearch.hpp  cvui.h  gui_skeleton.cpp  gui_skeleton.hpp  inpainting.cpp  inpainting.hpp  main.cpp  patch_match.cpp  patch_match.hpp  reconstruction.cpp  reconstruction.hpp
